# hashversion-python

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonpublish.yml  qualitychecks.yml
docs/: conf.py  index.rst
hashver/: __init__.py
hashversion/: cli.py
tests/: conftest.py  test_changes.py  test_configs.py  test_version.py  utils.py
