[tool.poetry]
name = "hashversion"
version = "0.4.0"
description = "Automate versioning and related requirements when using hashver"
authors = ["Ronnie Smith <halfpint1170@gmail.com>"]
readme = "README.md"
repository = "https://github.com/miniscruff/hashversion-python"
keywords = ["versioning", "CLI", "changelogs"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "^3.6"
gitpython = "^3.0.5"
click = "^7.0"
toml = "^0.10.0"
sphinx = {version = "^2.3.1", optional = true}
sphinx-rtd-theme = {version = "^0.4.3", optional = true}
m2r = {version = "^0.2.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "19.3b0"
pytest-cov = "^2.8.1"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "m2r"]

[tool.poetry.scripts]
hashver = "hashversion.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
